examples/datalog/12_errors/02_invalid_syntax_error.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_syntax_err
Knowledge graph 'test_syntax_err' created.
Switched to knowledge graph: test_syntax_err
> .kg use test_syntax_err
Switched to knowledge graph: test_syntax_err
> +edge[(1, 2), (2, 3)].
Inserted 2 fact(s) into 'edge'.
> +broken[(1, 2.
Script error: Parse error: Bulk insert must be in format: relation[(t1), (t2), ...]
