examples/datalog/12_errors/02_invalid_syntax_error.dl
% Test: Invalid Syntax Errors
% Category: 12_errors
% Description: Tests error handling for various syntax errors

.kg create test_syntax_err
.kg use test_syntax_err

% Insert some valid data first
+edge[(1, 2), (2, 3)].

% Missing closing bracket - should error
+broken[(1, 2.

% Cleanup (may not execute if above fails)
.kg use default
.kg drop test_syntax_err
